feat: add singleton user profile
